1) removed the admin menu for users on mobile devices. causes too many issues 2) footer adjustments

--- a/sites/all/themes/elx_front/sass/components/footer/_footer.scss
+++ b/sites/all/themes/elx_front/sass/components/footer/_footer.scss
@@ -3,7 +3,7 @@ footer.footer.region.region-footer {
     height: 55px;
 
     div#block-menu-menu-footer-menu- {
-        width: 250px;
+        width: 255px;
         margin-left: auto;
         margin-right: auto;
     }
